force-app/main/default/objects/MejoraOportunidad__c/MejoraOportunidad__c.object-meta.xml
<CustomObject>
    <label>Mejora Oportunidad</label>
    <nameField>
        <label>MejorasOportunidad Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>MejorasOportunidad</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>