force-app/main/default/objects/MejoraOportunidad__c/fields/IVANumero__c.field-meta.xml
<CustomField>
    <fullName>IVANumero__c</fullName>
    <description>Campo formula que convierte el IVA de mejora de la picklist en numero para usarlo en los diferentes procesos.</description>
    <formula>VALUE(LEFT(TEXT(Mejora__r.IVA__c) ,Find(&quot;%&quot;, TEXT(Mejora__r.IVA__c) )-1))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>IVA Número</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>