force-app/main/default/objects/MejoraOportunidad__c/fields/Mejora__c.field-meta.xml
<CustomField>
    <fullName>Mejora__c</fullName>
    <label>Mejora</label>
    <referenceTo>Mejora__c</referenceTo>
    <relationshipName>MejorasPromocion</relationshipName>
    <relationshipOrder>1</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>