force-app/main/default/objects/MejoraOportunidad__c/fields/Precio__c.field-meta.xml
<CustomField>
    <fullName>Precio__c</fullName>
    <description>Precio de la Mejora Oportunidad</description>
    <label>Precio</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>