force-app/main/default/objects/MejoraOportunidad__c/fields/Precio_Total__c.field-meta.xml
<CustomField>
    <fullName>Precio_Total__c</fullName>
    <description>Precio total de la Mejora Oportunidad</description>
    <label>Precio Total</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>