force-app/main/default/objects/MejoraOportunidad__c/fields/PrecioMejora__c.field-meta.xml
<CustomField>
    <fullName>PrecioMejora__c</fullName>
    <description>Obtiene el precio del campo Precio de la Mejora relacionada</description>
    <formula>Mejora__r.Precio__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Precio_deprecated</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>