force-app/main/default/objects/MejoraOportunidad__c/fields/PrecioTotal__c.field-meta.xml
<CustomField>
    <fullName>PrecioTotal__c</fullName>
    <formula>Mejora__r.Precio__c * Unidades__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Precio Total_deprecated</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>